[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/PlayerProjectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/playerShip3_green.png" type="Texture" id=3]
[ext_resource path="res://audio/ShootPlayer.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 39.756

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}
projectile = ExtResource( 2 )
health = 20

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 1.42 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="ShootTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="CannonPosition" type="Position2D" parent="." index="3"]

position = Vector2( 0, -30 )

[node name="RestartTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Audio" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]


